SFUSA/force-app/main/default/objects/Customer_Survey__c/fields/Comments__c.field-meta.xml
<CustomField>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Additional comments / suggestions</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </CustomField>