SFUSA/force-app/main/default/objects/Customer_Survey__c/fields/Composite_Rating__c.field-meta.xml
<CustomField>
        <fullName>Composite_Rating__c</fullName>
        <formula>IF(Tour__c,(
Case(Tour_Guide_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0) +
Case(Tour_Content_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0) +
Case(Tasting_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0) +
Case(Gift_Shop_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0) +
Case(Food_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0))/5
,(
Case(Gift_Shop_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0) +
Case(Food_Rating__c,
"1",1,
"2",2,
"3",3,
"4",4,
"5",5,0))/2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average of Tour and Stillhouse Ratings or just the Sthillhouse Ratings if a Tour wasn't taken</inlineHelpText>
        <label>Composite Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>