SFUSA/force-app/main/default/objects/Customer_Survey__c/fields/Email_Address__c.field-meta.xml
<CustomField>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Participant provided email address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </CustomField>