SFUSA/force-app/main/default/objects/Customer_Survey__c/fields/Tasting_Rating__c.field-meta.xml
<CustomField>
        <fullName>Tasting_Rating__c</fullName>
        <inlineHelpText>How was your tasting experience?

1 = Needs Work
5 = Damn Good</inlineHelpText>
        <label>Tasting Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>