SFUSA/force-app/main/default/objects/Customer_Survey__c/fields/Tour_Lost_Detail__c.field-meta.xml
<CustomField>
        <fullName>Tour_Lost_Detail__c</fullName>
        <inlineHelpText>If now, why note? Other</inlineHelpText>
        <label>Tour Lost Detail</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>